# libcron

./: .gitignore  CMakeLists.txt  README.md
libcron/: CMakeLists.txt
libcron/src/: CronData.cpp
test/: CMakeLists.txt  CronDataTest.cpp
vcpkg-overlays/libcron/: portfile.cmake  vcpkg.json
